@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.estuary.uMod" version="2.8.0" name="Estuary uMod" provider-name="darkozma, devalls, phil65, Ichabod Fletchman">
+<addon id="skin.estuary.uMod" version="2.8.5" name="Estuary uMod" provider-name="darkozma, devalls, phil65, Ichabod Fletchman">
 	<requires>
 		<import addon="xbmc.gui" version="5.12.0"/>
 	</requires>
@@ -38,19 +38,21 @@
 			<screenshot>resources/screenshot-09.png</screenshot>
 		</assets>
 		<news>[COLOR blue][B]Skin Estuary uMod[/B][/COLOR]
-[COLOR green][B]•2.8.0[/B] Update code.[/COLOR]
+[COLOR green][B]•2.8.5[/B] Variables modded.[/COLOR]
+[COLOR yellow][B]•2.8.2[/B] Add new code and icon FibracatTV.[/COLOR]
+[COLOR yellow][B]•2.8.0[/B] Update code.[/COLOR]
 [COLOR yellow][B]•2.7.9[/B] Cleaning code.[/COLOR]
 [COLOR yellow][B]•2.7.8[/B] Update resources.[/COLOR]
 [COLOR yellow][B]•2.7.6[/B] Minor bug fix.[/COLOR]
-[COLOR yellow][B]•2.7.5[/B] Home fix[/COLOR]
-[COLOR yellow][B]•2.7.0[/B] Platform fix[/COLOR]
-[COLOR yellow][B]•2.5.0[/B] Bug fix[/COLOR]
-[COLOR yellow][B]•2.3.3[/B] Minor fix[/COLOR]
-[COLOR yellow][B]•2.2.8[/B] Initial beta test[/COLOR]
-[COLOR yellow][B]•2.2.5[/B] Initial beta[/COLOR]
-[COLOR yellow][B]•2.0.2[/B] Home modded[/COLOR]
-[COLOR yellow][B]•1.4.2[/B] DialogButtonMenu modded[/COLOR]
-[COLOR yellow][B]•0.2.1[/B] Initial alpha[/COLOR]
-[COLOR yellow][B]•0.0.1[/B] Mod Estuary (0.8.5) for Ubuntu + Scripts[/COLOR]</news>
+[COLOR yellow][B]•2.7.5[/B] Home fix.[/COLOR]
+[COLOR yellow][B]•2.7.0[/B] Platform fix.[/COLOR]
+[COLOR yellow][B]•2.5.0[/B] Bug fix.[/COLOR]
+[COLOR yellow][B]•2.3.3[/B] Minor fix.[/COLOR]
+[COLOR yellow][B]•2.2.8[/B] Initial beta test.[/COLOR]
+[COLOR yellow][B]•2.2.5[/B] Initial beta.[/COLOR]
+[COLOR yellow][B]•2.0.2[/B] Home modded.[/COLOR]
+[COLOR yellow][B]•1.4.2[/B] DialogButtonMenu modded.[/COLOR]
+[COLOR yellow][B]•0.2.1[/B] Initial alpha.[/COLOR]
+[COLOR yellow][B]•0.0.1[/B] Mod Estuary (0.8.5) for Ubuntu + Scripts.[/COLOR]</news>
 	</extension>
 </addon>
